--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,7 +104,7 @@
     @apply bg-background text-foreground;
   }
   .card {
-    @apply bg-card/80 backdrop-blur-lg;
+    @apply bg-background/70 backdrop-blur-lg;
   }
 }
 
